--- a/src/Componants/home/home.css
+++ b/src/Componants/home/home.css
@@ -65,9 +65,16 @@ body{
     -webkit-filter: grayscale(0);
     filter: grayscale(0);
 }
-
+.all h1{
+  font-weight: bolder;
+  text-align: center;
+  padding-top: 80px;
+}
 .all span{
     color: #1099C5;
+}
+.all h3{
+  text-align: center;
 }
 
 .box{
@@ -178,17 +185,20 @@ body{
 .process .box-1 img {
   max-width: 100%;
   height: auto;
-  border-radius: 15px;
 }
 
 .indu {
   padding: 50px 0;
 }
+.indu .container {
+  display: flex;
+  flex-direction: column;
+}
 
 .indu img.logo{
   position: absolute;
   width: 65px;
-  left: 40%; 
+  left: 40.5%; 
 }
 .indu h3{
   position: relative;
@@ -197,6 +207,13 @@ body{
   font-weight: 600;
   color: white;
   text-align: center;
+}
+.indu .btn{
+  background-color: white;
+  align-self: flex-end;
+}
+.indu .btn:hover{
+  color: black;
 }
 .indu .box-img {
   display: flex;
@@ -208,11 +225,84 @@ body{
 .indu .box-1 {
   flex: 1;
   margin: 0 5px;
-  padding: 20px;
+  /* padding: 20px; */
 }
 
 .indu .box-1 img {
   max-width: 100%;
   height: auto;
-  border-radius: 15px;
+}
+.indu .box-1 h6{
+  text-align: center;
+  padding-top: 30px;
+}
+.meet{
+  padding: 30px 0px;
+  background-color: white;
+  color: black;
+ 
+}
+.meet img.logo{
+  position: absolute;
+  width: 65px;
+  left: 43%; 
+}
+.meet h3{
+  position: relative;
+  top: 30px;
+  font-size: 28px;
+  font-weight: 600;
+  color: black;
+  text-align: center;
+}
+.meet .box-img {
+  display: flex;
+  justify-content: space-between; 
+  align-items: center; 
+}
+
+.meet .box-1 {
+  flex: 1; 
+  margin: 0 5px; 
+}
+
+.meet .box-1 img {
+  max-width: 100%; 
+  height: auto; 
+  border-radius: 50%;
+}
+
+.test{
+  padding: 30px 0px;
+ 
+}
+.test img.logo{
+  position: absolute;
+  width: 65px;
+  left: 44%; 
+}
+.test h3{
+  position: relative;
+  top: 30px;
+  font-size: 28px;
+  font-weight: 600;
+  color: white;
+  text-align: center;
+}
+.test .card h5{
+  color: #5D5A88;
+}
+.test .card p{
+  color: #8D8BA7;
+}
+.talk{
+  padding: 30px 0px;
+  background-color: white;
+  color: black;
+}
+.talk h1{
+  font-weight: bolder;
+  text-align: center;
+  margin-top: 150px;
+  font-size: 60px;
 }
