--- a/src/Componants/service/service.css
+++ b/src/Componants/service/service.css
@@ -3,6 +3,25 @@
     background: #fff;
     color: black;
 }
+.services .bg{
+    background-image: linear-gradient(to bottom, rgba(15, 23, 45, 0.9), rgba(15, 23, 45, 0.9)),url(./../../../public/image/service/Join_Our_Team_title\ 1.png);
+    width: 100%;
+    height: 30vh;
+    background-size: cover;
+    background-position: center;
+    margin-top: 80px;
+    
+}
+.services .bg h2{
+    color: #1099C5;
+    text-align: center;
+    font-weight: bolder;
+    padding-top: 90px;
+}
+.services .bg p{
+    color: white;
+    text-align: center;
+}
 
 .services .text {
     margin: 40px 0;
