--- a/src/Componants/home/home.css
+++ b/src/Componants/home/home.css
@@ -77,7 +77,13 @@ body{
 .all h3{
   text-align: center;
 }
-
+.all .finish{
+  border-right: 2px solid #404956;
+  margin-right: -25px;
+}
+.all .hr {
+  border: 1px solid white;
+}
 .box{
   padding: 30px 0px;
   background-color: white;
