--- a/src/Componants/contact/contact.css
+++ b/src/Componants/contact/contact.css
@@ -3,7 +3,7 @@
 }
 
 .contact .bg{
-    background-image: linear-gradient(to bottom, rgba(15, 23, 45, 0.9), rgba(15, 23, 45, 0.9)),url(./../../../public/image/conatct/services\ 1.png);
+    background-image: url(./../../../public/image/contact/contact.png);
     width: 100%;
     height: 30vh;
     background-size: cover;
@@ -20,4 +20,70 @@
 .contact .bg p{
     color: white;
     text-align: center;
+}
+
+.contact .box{
+    padding: 20px 80px;
+    /* border: 1px solid black; */
+    box-shadow: 0 4px 8px 0 black;
+}
+.contact .box h2{
+    color: #1099C5;
+    font-weight: bolder;
+    text-align: center;
+}
+.contact .box p{
+    text-align: center;
+}
+.contact .box .form-label{
+    font-weight: bolder;
+}
+.contact .box .form-control{
+    background-color: #69696966;
+    border-radius: 10px;
+    color: #fff;
+}
+.contact .box .form-control::placeholder{
+    color: #fff;
+}
+.contact .box .form-label span{
+    color: red;
+}
+.contact .box button{
+    background-color: #000C1D;
+    color: #fff;
+    border: none;
+    padding: 10px;
+    border-radius: 10px;
+}
+.contact .map{
+    width: 100%;
+}
+.contact .help{
+    color: black;
+}
+.contact .help h2{
+    text-align: center;
+    font-weight: bolder;
+}
+.contact .help .free{
+    background-color: #F0F0F0;
+    padding: 25px 40px;
+    height: 100%;
+    box-shadow: 0 2px 0 0 #00000040;
+}
+.contact .help .free h5{
+    font-weight: bolder;
+    margin-top: 10px;
+    text-align: center;
+}
+.contact .help .free p{
+    color: #696969;
+}
+.contact .help .free button{
+    background: #000C1D;
+    border: none;
+    color: #fff;
+    padding: 10px;
+    border-radius: 5px;
 }
