--- a/src/Componants/service/webdevlopment.css
+++ b/src/Componants/service/webdevlopment.css
@@ -105,28 +105,75 @@ marquee .ma-img{
     box-shadow: 0 4px 4px 0 black;
   }
 
-.get-touch{
-    background-color: #0E1934;
+
+.data{
+    margin-top: 200px;
+    color: black;
 }
-.get-touch h2{
+.data h2{
     text-align: center;
     font-weight: bolder;
-    line-height: 50px;
-}
-.get-touch button{
-    border: none;
-    padding: 10px;
-    font-weight: bolder;
-    border-radius: 5px;
-}
-.get-touch button:hover{
-    box-shadow: 0 4px 8px 0 white;
-}
-.get-touch .card{
-    color: #656363;
-    text-align: center;
-}
-.get-touch .card i{
-    color: #0E1934;
 }
 
+.data .chek {
+    display: flex;
+    align-items: center; 
+    gap: 10px;
+  }
+.data .chek span {
+    font-size: 60px;
+    align-self: flex-start;
+    font-weight: bolder;
+  }
+.data .chek .one{
+    background: linear-gradient(180deg, rgba(197, 173, 215, 0.44) 0%, rgba(104, 91, 113, 0.4) 100%);
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+}
+.data .chek .two{
+    background: linear-gradient(180deg, rgba(109, 187, 229, 0.54) 0%, rgba(64, 155, 206, 0.53) 100%);
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+}
+.data .chek .three{
+    background: linear-gradient(180deg, rgba(197, 219, 60, 0.54) 0%, rgba(164, 183, 32, 0.53) 100%);
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+}
+.data .chek .four{
+    background: linear-gradient(180deg, rgba(214, 77, 68, 0.54) 0%, rgba(139, 46, 45, 0.55) 100%);
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+}
+.data .chek .five{
+    background: linear-gradient(180deg, rgba(58, 189, 190, 0.2862) 0%, rgba(14, 130, 129, 0.2916) 100%);
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+}
+.data .chek .six{
+    background: linear-gradient(180deg, rgba(255, 194, 103, 0.54) 0%, rgba(255, 167, 38, 0.53) 100%);
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+}
+.data .chek .seven{
+    background: linear-gradient(180deg, rgba(197, 219, 60, 0.53) 0%, rgba(164, 183, 32, 0.54) 100%);
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+}
+.data .chek .eight{
+    background: linear-gradient(180deg, rgba(109, 187, 229, 0.54) 0%, rgba(64, 155, 206, 0.53) 100%);
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+}
+.data .chek h1 {
+    margin: 0; 
+  }
+  
