--- a/src/Componants/service/app/mobile.css
+++ b/src/Componants/service/app/mobile.css
@@ -18,7 +18,7 @@
 }
 
 .mobile .box:hover {
-    box-shadow: 0 4px 8px 0 #DDDDDD;
+    box-shadow: 0 4px 8px 0 #00000040;
     border: 1px solid #1A76D166;
 }
 
@@ -114,3 +114,35 @@
     margin: 0;
     font-weight: bolder; 
   }
+
+.inno{
+    color: #000000;
+    margin-top: 200px;
+}  
+.inno h2{
+    text-align: center;
+    font-weight: bolder;
+}
+.inno .custom-hr{
+    width: 10%;
+    color: black;
+    margin: 0 auto;
+    text-align: center;
+}
+.inno .box {
+    border: 1px solid #DDDDDD;
+    height: 100%;
+    padding: 40px ;
+}
+
+.inno .box:hover {
+    box-shadow: 0 4px 8px 0 #00000040;
+    border: 1px solid #1A76D166;
+}
+.inno .box h5{
+    text-align: center;
+    font-weight: bolder;
+}
+.inno .box p{
+    color: #696969;
+}
