--- a/src/Componants/service/software/software.css
+++ b/src/Componants/service/software/software.css
@@ -3,6 +3,7 @@
 }
 .software h2{
     text-align: center;
+    font-weight: bolder;
 }
 
 .software .custom-hr{
@@ -14,7 +15,7 @@
 .software .box {
     border: 1px solid #DDDDDD;
     height: 100%;
-    padding: 40px ;
+    padding: 40px;
 }
 .software .box:hover {
     box-shadow: 0 4px 8px 0 #00000040;
@@ -34,6 +35,7 @@
 }
 .industry h2{
     text-align: center;
+    font-weight: bolder;
 }
 .industry .custom-hr{
     width: 10%;
@@ -43,4 +45,100 @@
 }
 .industry h6{
     text-align: center;
+}
+.industry .bo{
+    border: 1px solid black;
+}
+.industry .bo h5{
+    text-align: center;
+}
+.industry .bo .menu {
+    border-right: 1px solid black;
+    border-bottom: 1px solid black;
+}
+.industry .bo .menu .active{
+    background-color: #0E1934;
+    color: #fff;
+}
+.industry .bo .menu .sub{
+    padding-top: 15px;
+    padding-bottom: 15px;
+    border-bottom: 1px solid black;
+}
+.industry .bo h3{
+    text-align: center;
+    padding: 20px;
+}
+.industry .bo p{
+    color: #696969;
+    padding: 0px 40px;
+    text-align: center;
+}
+
+
+.rede{
+    color: black;
+}
+.rede h2{
+    text-align: center;
+    font-weight: bolder;
+}
+.rede .custom-hr{
+    width: 10%;
+    color: black;
+    margin: 0 auto;
+    text-align: center;
+}
+.rede .box {
+    border: 1px solid #DDDDDD;
+    height: 100%;
+    padding: 40px ;
+}
+
+.rede .box:hover {
+    box-shadow: 0 4px 8px 0 #00000040;
+    border: 1px solid #1A76D166;
+}
+.rede .box h5{
+    margin-top: 15px;
+    text-align: center;
+    font-weight: bold;
+}
+.rede .box p{
+    color: #696969;
+}
+
+.rise{
+    color: black;
+}
+.rise h2{
+    /* text-align: center; */
+    font-weight: bolder;
+}
+.rise p{
+    color: #696969;
+}
+.rise h5{
+    font-weight: bolder;
+}
+.rise .chek {
+    display: flex;
+    align-items: center; 
+    gap: 10px; 
+  }
+.rise .chek img {
+    align-self: flex-start;
+  }
+
+.rise .chek h6 {
+    margin: 0;
+}
+.rise button{
+    background-color: #fff;
+    padding: 5px 30px;
+    border-radius: 5px;
+
+}
+.rise button:hover {
+    box-shadow: 0 4px 8px 0 black;
 }
